--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,5 +36,6 @@ jobs:
       # run tests!
       - run: yarn test
 
-
-
+      # Store build stats artifact
+      - store_artifacts:
+          path: webpack-build-stats.json
